--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,20 @@
 @import 'partials/reset';
-
+@import 'partials/main-content';
 
 body {
-  font-size: 16px;
-  line-height: 1.6;
-  width: 100%;
-  margin: 0 auto;
+    font-size: 16px;
+    line-height: 1.6;
+    margin: 0 auto;
+    position: absolute;
+    width: 100%;
+    background: linear-gradient(270deg, #ef5723, #4c189a);
+}
+
+main {
+    border: 1px solid black;
+    height: 600px;
+    margin: 0 auto;
+    position: relative;
+    width: 90%;
+    margin: 35px;
 }
