--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,38 @@
 @import 'partials/reset';
-
+@import 'partials/styles';
+@import 'partials/homescreen';
+@import 'partials/profile';
+@import 'partials/miniprofile';
 
 body {
-  font-size: 16px;
-  line-height: 1.6;
-  width: 100%;
-  margin: 0 auto;
+    background: $ltpink;
+    font: 18px/1.6 $jose;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+}
+
+h1 {
+    color: white;
+    font-size: 10rem;
+    position: absolute;
+    text-shadow: 5px 5px #e94177;
+}
+
+h2 {
+    background: transparentize($pink, .4);
+    color: white;
+    font-family: $megrim;
+    font-size: 1.5rem;
+    padding: 0 20px;
+}
+
+h3 {
+  background: transparentize($pink, .4);
+  font: 1.2rem/1.2 $jose;
+}
+
+footer {
+  background: transparentize($pink, .4);
+  margin-top: 10px;
 }
