--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -77,6 +76,9 @@ img {
   height: 50px;
   width: 50px; }
 
+.is-green {
+  background: green; }
+
 input,
 label,
 select {
@@ -91,6 +93,9 @@ select {
 input,
 select {
   color: gray; }
+
+.user-file-input {
+  width: 200px; }
 
 #bg-container {
   height: 400px;
@@ -114,7 +119,7 @@ select {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 auto;
-  max-width: 840px;
+  max-width: 640px;
   text-align: center; }
 
 .form-submit {
@@ -133,6 +138,9 @@ select {
   background-color: rgba(233, 65, 119, 0.6);
   background: url("../img/profile-bg.jpg");
   padding: 1vh 0; }
+
+.profile-container {
+  min-height: 645px; }
 
 .profile-section {
   border-radius: 10px;
@@ -160,15 +168,10 @@ select {
   width: 100%; }
 
 .img-wrapper {
-  background: no-repeat center/80% url("../img/frame.png");
-  max-height: 330px;
+  max-height: 315px;
   margin: 0 auto;
   overflow: hidden;
-  padding: 50px;
-  width: 267px; }
-
-.img-wrapper {
-  border-radius: 10px; }
+  width: 315px; }
 
 .knot, .snag {
   background: rgba(233, 65, 119, 0.6);
@@ -200,8 +203,11 @@ select {
     color: #310808;
     font-size: 3rem;
     line-height: 1; }
+  .profile-header p {
+    border-bottom: 0.5px solid #e94177;
+    padding-right: 20px; }
 
-.profile-likes-container {
+.profile-container {
   align-content: center;
   display: flex;
   flex-wrap: wrap;
@@ -210,23 +216,34 @@ select {
 .likes-section {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  margin-left: 5px; }
+  margin-left: 5px;
+  overflow: hidden; }
   .likes-section h2 {
     border-radius: 10px; }
 
+.five-latest {
+  min-width: 350px; }
+
 .mini-profile {
   align-items: center;
-  background: #ffd9d9;
-  border-bottom: 1px solid #310808;
+  background: #f6eaea;
+  border: 0.5px solid #e94177;
+  border-radius: 10px;
+  color: #310808;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin: 5px;
   min-width: 350px;
-  padding-bottom: 5px;
-  text-align: center; }
+  padding: 5px; }
+  .mini-profile:hover {
+    background: rgba(204, 41, 41, 0.3); }
   .mini-profile ul {
     padding: 10px; }
+  .mini-profile h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 0 2px;
+    background: inherit; }
 
 body {
   background: #ffd9d9;
@@ -253,6 +270,23 @@ h3 {
   font: 1.2rem/1.2 "Josefin Sans", sans-serif; }
 
 footer {
-  background: rgba(233, 65, 119, 0.6);
-  margin-top: 10px; }
+  background: rgba(233, 65, 119, 0.6); }
 
+.all-snags-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+
+.show-all-snags-button, .rate-again-button {
+  background: rgba(233, 65, 119, 0.6);
+  border: 1px solid #e94177;
+  border-radius: 10px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  padding: 10px; }
+  .show-all-snags-button:hover, .rate-again-button:hover {
+    background-color: #e94177;
+    color: white;
+    transition: 0.5s ease; }
+
+/*# sourceMappingURL=main.css.map */
