--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -34,5 +34,28 @@ h3 {
 
 footer {
   background: transparentize($pink, .4);
-  margin-top: 10px;
 }
+
+.all-snags-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.show-all-snags-button {
+      background: transparentize($pink, .4);
+      border: 1px solid $pink;
+      border-radius: 10px;
+      font-family: $jose;
+      font-size: 1.5rem;
+      padding: 10px;
+      &:hover {
+          background-color: $pink;
+          color: white;
+          transition: 0.5s ease;
+      }
+  }
+
+  .rate-again-button {
+    @extend .show-all-snags-button;
+  }
