--- a/public/styles/partials/_miniprofile.scss
+++ b/public/styles/partials/_miniprofile.scss
@@ -4,16 +4,19 @@
     background-repeat: no-repeat;
     background-position: 10%;
     text-align: right;
-
     & h2 {
         background-color: inherit;
         color: $maroon;
         font-size: 3rem;
         line-height: 1;
     }
+    & p {
+    border-bottom: .5px solid $pink;
+    padding-right: 20px;
+  }
 }
 
-.profile-likes-container {
+.profile-container {
     align-content: center;
     display: flex;
     flex-wrap: wrap;
@@ -23,26 +26,39 @@
 .likes-section {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     margin-left: 5px;
+    overflow:hidden;
 
     & h2 {
         border-radius: 10px;
     }
 }
+.five-latest {
+  min-width: 350px;
+}
 
 .mini-profile {
     align-items: center;
-    background: #ffd9d9;
-    border-bottom: 1px solid $maroon;
+    background: #f6eaea;
+    border: 0.5px solid $pink;
+    border-radius: 10px;
+    color: $maroon;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin: 5px;
     min-width: 350px;
-    padding-bottom: 5px;
-    text-align: center;
+    padding: 5px;
+    &:hover {
+      background: transparentize($ltred, .7);
+    }
 
     & ul {
         padding: 10px;
+    }
+    & h3 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      padding: 0 2px;
+      background: inherit;
     }
 }
